--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,7 @@ body {
   white-space: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #ffffff;
+  background-color:  ;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
@@ -218,7 +218,7 @@ body.no-grow main {
 
 main {
   position: relative;
-  background-color: #ffffff;
+  background-color:  ;
   z-index: 1;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -3753,7 +3753,7 @@ a:hover, a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color:  ;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   z-index: 2;
@@ -4768,21 +4768,18 @@ a:hover, a:focus {
 
 /* 3.13 Hero section in creative homepage */
 .creative-hero {
-/*   padding: 100px 0 70px; */
-    padding: 60px 0 70px;
+  padding: 100px 0 70px;
 }
 
 @media (min-width: 992px) {
   .creative-hero {
-/*     padding-top: 75px; */
-    padding-top: 60px;
+    padding-top: 75px;
   }
 }
 
 @media (min-width: 1200px) {
   .creative-hero {
-/*     padding-top: 100px; */
-    padding-top: 60px;
+    padding-top: 100px;
   }
 }
 
@@ -10579,7 +10576,7 @@ a:hover, a:focus {
 /* 5.3 Wrapper for header and main content */
 .leftward-wrapper {
   position: relative;
-  background-color: #ffffff;
+  background-color:  ;
   z-index: 1;
 }
 
