--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,13 +30,15 @@
 </ul>
           </div>
           <div class="footer__feedback">
-            <div class="footer__title">This site uses brand affiliate links.</div>
+            <div class="footer__title">TABLE books pro</div>
 
-            <div class="footer__feedback-notice">For more information, see my <a href="#" target="_blank">Affiliate Disclosure</a> and view our <a href="#" target="_blank">Terms of Service</a>.</div>
+            <div class="footer__feedback-notice">Independent publisher of unique table books, chapbooks, and more.</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright">© IWM LLC 2025. All Rights Resevered.<br>TABLE books pro™</div>
+            <div class="footer__copyright">© IWM LLC 2025.<br>All Rights Resevered.<br>TABLE books pro™</div>
             <a class="footer__privacy" href="#">Privacy Policy</a>
+            <a class="footer__privacy" href="#">Terms of Service</a>
+            <a class="footer__privacy" href="#">Affiliate Disclosure</a>
           </div>
         </div>
       </div>
