--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
           <div class="footer__feedback">
             <div class="footer__title">TABLE books pro</div>
 
-            <div class="footer__feedback-notice">Independent publisher of unique table books, chapbooks, and more.</div>
+            <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more. Our catalog of titles includes American Coffee Table Book and Bitcoin Coffee Table Book.</div>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025.<br>All Rights Resevered.<br>TABLE books pro™</div>
