--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4825,10 +4825,11 @@ a:hover, a:focus {
 @media (min-width: 576px) {
   .creative-hero__title {
     max-width: 44.4%;
-    margin-top: 12px;
+    margin-top: 92px;
     margin-bottom: 56px;
     font-size: 48px;
     font-size: 52px;
+    padding-top: 100px;
   }
 }
 
