--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,9 +36,7 @@
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025.<br>All Rights Resevered.<br>TABLE books pro™</div>
-            <a class="footer__privacy" href="#">Privacy Policy</a>
-            <a class="footer__privacy" href="#">Terms of Service</a>
-            <a class="footer__privacy" href="#">Affiliate Disclosure</a>
+            <a class="footer__privacy" href="#">Privacy Policy</a><br><a class="footer__privacy" href="#">Terms of Service</a><br><a class="footer__privacy" href="#">Affiliate Disclosure</a>
           </div>
         </div>
       </div>
