--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,13 +30,17 @@
 </ul>
           </div>
           <div class="footer__feedback">
-            <div class="footer__title">TABLE books pro</div>
+          <a class="header__logo logo" href="/">
+          <svg width="119" height="19">
+            <use xlink:href="#logo"></use>
+          </svg>
+        </a>
 
             <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more. Our catalog of titles includes American Coffee Table Book and Bitcoin Coffee Table Book.</div>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025.<br>All Rights Resevered.<br>TABLE books pro™</div>
-            <div class="footer__privacy"><a class="footer__privacy" href="#">Privacy Policy</a><br><a class="footer__privacy" href="#">Terms of Service</a><br>< class="footer__privacy" href="#">Affiliate Disclosure</div>
+            <div class="footer__privacy"><a class="footer__privacy" href="#">Privacy Policy</a><br><a class="footer__privacy" href="#">Terms of Service</a><br><a class="footer__privacy" href="#">Affiliate Disclosure</a></div>
           </div>
         </div>
       </div>
