--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
         </a>
 
             <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more. Our catalog of titles includes American Coffee Table Book and Bitcoin Coffee Table Book.</div><br>
-            <iframe src="https://tablebookspro.substack.com/embed" width="300" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://tablebookspro.substack.com/embed" width="100%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025.<br>All Rights Resevered.<br>TABLE books pro™</div>
