--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
 
                 var iframe = document.getElementsByTagName('iframe')[0];
                 iframe.style.background = 'red';
-                iframe.contentWindow.document.body.style.backgroundColor = 'white';
+                iframe.contentWindow.document.body.style.backgroundColor = 'blue';
 
               }, delayInMilliseconds);
             </script>
