--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,15 +43,9 @@
             <div class="footer__copyright">© IWM LLC 2025.<br>All Rights Resevered.<br>TABLE books pro™</div>
             <div class="footer__privacy"><a class="footer__privacy" href="#">Privacy Policy</a><br><a class="footer__privacy" href="#">Terms of Service</a><br><a class="footer__privacy" href="#">Affiliate Disclosure</a></div>
             <script>
-              var delayInMilliseconds = 500; // half a second
-
-              setTimeout(function() { 
-
-                var iframe = document.getElementsByTagName('iframe')[0];
-                iframe.style.background = 'red';
-                iframe.contentWindow.document.body.style.backgroundColor = 'blue';
-
-              }, delayInMilliseconds);
+var iframe = document.getElementsByTagName('iframe')[0];
+iframe.style.background = '#960000';
+iframe.contentWindow.document.body.style.backgroundColor = '#960000';
             </script>
           </div>
         </div>
