--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
           </svg>
         </a>
 
-            <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more.<br>SUBSCRIBE:</div><br>
+            <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more.<br><strong>SUBSCRIBE:</strong></div>
             <iframe src="https://tablebookspro.substack.com/embed" width="100%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
           </div>
           <div class="footer__bottom">
