--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro™</div>
-            <div class="footer__privacy"><a class="footer__privacy" href="#">Privacy Policy</a><br><a class="footer__privacy" href="#">Terms of Service</a><br><a class="footer__privacy" href="#">Affiliate Disclosure</a></div>
+            <div class="footer__privacy"><span class="footer__privacy" href="#">Privacy Policy</span><br><a class="footer__privacy" href="#">Terms of Service</a><br><a class="footer__privacy" href="#">Affiliate Disclosure</a></div>
           </div>
         </div>
       </div>
