--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,8 +36,7 @@
           </svg>
         </a>
 
-            <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more.<br><br><strong>SUBSCRIBE:</strong></div><br>
-            <iframe src="https://tablebookspro.substack.com/embed" width="100%" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+            <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more.<br><br><strong>IMBUED WITH MEANING</strong></div><br>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro™</div>
