--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,7 +1,8 @@
 <!-- favicon -->
-<link rel="apple-touch-icon" sizes="60x60" href="{{ '/assets/favicons/apple-touch-icon.png' | relative_url }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicons/favicon-32x32.png' | relative_url }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicons/favicon-16x16.png' | relative_url }}">
-<link rel="manifest" href="{{ '/assets/favicons/site.webmanifest' | relative_url }}">
-<link rel="mask-icon" href="{{ '/assets/favicons/safari-pinned-tab.svg' | relative_url }}" color="#5bbad5">
+<link rel="icon" type="image/png" href="{{ 'assets/favicons//favicon-96x96.png' | relative_url }}" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="{{ 'assets/favicons/favicon.svg' | relative_url }}" />
+<link rel="shortcut icon" href="{{ 'assets/favicons/favicon.ico' | relative_url }}" />
+<link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/favicons/apple-touch-icon.png' | relative_url }}" />
+<meta name="apple-mobile-web-app-title" content="TABLE books pro" />
+<link rel="manifest" href="{{ 'assets/favicons/site.webmanifest' | relative_url }}" />
 <!-- favicon -->
