--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,11 +36,15 @@
           </svg>
         </a>
 
-            <div class="footer__feedback-notice">An independent publisher of unique table books, chapbooks, and more.<br><br><strong>IMBUED WITH MEANING</strong></div><br>
+            <div class="footer__feedback-notice">{{ site.description }}</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright">© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro™</div>
-            <div class="footer__privacy">Privacy Policy<br>Terms of Service<br>Affiliate Disclosure</div>
+            <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
+            <div class="footer__privacy">
+              <a href="">Privacy Policy</a><br>
+              <a href="">Terms of Service</a><br>
+              <a href="">Affiliate Disclosure</a>
+            </div>
           </div>
         </div>
       </div>
