--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,10 +40,10 @@
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
-            <div class="footer__privacy">
-              <a href="">Privacy Policy</a><br>
-              <a href="">Terms of Service</a><br>
-              <a href="">Affiliate Disclosure</a>
+            <div class="footer__menu footer__menu-list">
+              <a href="" class="footer__menu-item">Privacy Policy</a><br>
+              <a href="" class="footer__menu-item">Terms of Service</a><br>
+              <a href="" class="footer__menu-item">Affiliate Disclosure</a>
             </div>
           </div>
         </div>
