--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,9 +41,9 @@
           <div class="footer__bottom">
             <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
             <div class="footer__menu footer__menu-list">
-              <a href="" class="footer__menu-item">Privacy Policy</a><br>
-              <a href="" class="footer__menu-item">Terms of Service</a><br>
-              <a href="" class="footer__menu-item">Affiliate Disclosure</a>
+              <ul class="footer__menu-item"><a href="">Privacy Policy</a></ul>
+              <ul class="footer__menu-item"><a href="" class="footer__menu-item">Terms of Service</a></ul>
+              <ul class="footer__menu-item"><a href="" class="footer__menu-item">Affiliate Disclosure</a></ul>
             </div>
           </div>
         </div>
