--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
 </ul>
           </div>
           <div class="footer__feedback">
-          <a class="header__logo logo" href="/">
+          <a class="header__logo logo" style="padding-top: 5px;" href="/">
           <svg width="119" height="19">
             <use xlink:href="#logo"></use>
           </svg>
