--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,17 +41,17 @@
           <div class="footer__bottom">
             <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
             <div class="footer__menu">
-              <div class="footer__menu-list>
+              <ul class="footer__menu-list>
                 <li class="footer__menu-item">
-                  <a href="">Privacy Policy</a>
+                  <a class="footer__menu-link" href="">Privacy Policy</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a href="" class="footer__menu-item">Terms of Service</a>
+                  <a class="footer__menu-link" href="" class="footer__menu-item">Terms of Service</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a href="" class="footer__menu-item">Affiliate Disclosure</a>
+                  <a class="footer__menu-link" href="" class="footer__menu-item">Affiliate Disclosure</a>
                 </li>
-              </div>
+              </ul>
             </div>
           </div>
         </div>
