--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
           </svg>
         </a>
 
-            <div class="footer__feedback-notice">WTF</div>
+            <div class="footer__feedback-notice">{{ site.description }}</div>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
