--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,7 @@
             <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
             <div class="footer__menu">
               <ul class="footer__menu-list>
+                <div class="footer__title">Disclosures</div>
                 <li class="footer__menu-item">
                   <a class="footer__menu-link" href="">Privacy Policy</a>
                 </li>
