--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
             <div class="footer__feedback-notice" style="padding-top 8px;">TABLE books pro is an independent publisher of unique table books, slim volumes, and more. Utterly unique Coffee Table Books at the right price, we've got 'em.</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Resevered<br>TABLE books pro</div>
+            <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Reserved<br>TABLE books pro</div>
             <div class="footer__menu">
               <ul class="footer__menu-list">
                 <li class="footer__menu-item">
