--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,13 +30,13 @@
 </ul>
           </div>
           <div class="footer__feedback">
-          <a class="header__logo logo" style="padding-top: 5px;" href="/">
+          <a class="header__logo logo" style="padding-top: 5px; padding-bottom: 10px;" href="/">
           <svg width="119" height="19">
             <use xlink:href="#logo"></use>
           </svg>
         </a>
 
-            <div class="footer__feedback-notice" style="padding-top 8px;">TABLE books pro is an independent publisher of unique table books, slim volumes, and more. Utterly unique Coffee Table Books at the right price, we've got 'em.</div>
+            <div class="footer__feedback-notice">{{ site.description }}</div>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights Reserved<br>TABLE books pro</div>
