--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
             <div class="footer__menu">
               <ul class="footer__menu-list">
                 <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="">Privacy Policy</a>
+                  <a class="footer__menu-link" href="https://tablebooks.pro/privacy/">Privacy Policy</a>
                 </li>
                 <li class="footer__menu-item">
                   <a class="footer__menu-link" href="" class="footer__menu-item">Terms of Service</a>
