--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
                   <a class="footer__menu-link" href="https://tablebooks.pro/privacy/">Privacy Policy</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="" class="footer__menu-item">Terms of Service</a>
+                  <a class="footer__menu-link" href="https://tablebooks.pro/terms-of-service/" class="footer__menu-item">Terms of Service</a>
                 </li>
                 <li class="footer__menu-item">
                   <a class="footer__menu-link" href="" class="footer__menu-item">Affiliate Disclosure</a>
