--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
                   <a class="footer__menu-link" href="https://tablebooks.pro/terms-of-service/" class="footer__menu-item">Terms of Service</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a class="footer__menu-link" href="" class="footer__menu-item">Affiliate Disclosure</a>
+                  <a class="footer__menu-link" href="https://tablebooks.pro/disclosure/" class="footer__menu-item">Affiliate Disclosure</a>
                 </li>
               </ul>
             </div>
