--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer __js_fixed-footer">
   <div class="footer__container container container--size-large">
     <div class="row col-md-4" style="height: 1px;"></div>
-    <div class="footer__grid col-md-8">
+    <div class="footer__grid row col-md-8">
       <div class="footer__menu col-4">
         <div class="footer__title">Quick Links</div>
         <ul class="footer__menu-list">
