--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
           </a>
           <div class="footer__feedback-notice">{{ site.description }}</div>
         </div>
-        <div class="footer__bottom row">
+        <div class="footer__bottom">
           <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights
             Reserved<br>TABLE books pro</div>
           <div class="footer__menu">
