--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="footer __js_fixed-footer">
   <div class="footer__container container container--size-large">
     <div class="row">
-      <div class="col-md-4" style="height: 1px;"></div>
-      <div class="footer__grid col-md-8">
+      <div class="footer__grid">
         <div class="footer__menu">
           <div class="footer__title">Quick Links</div>
           <ul class="footer__menu-list">
@@ -34,7 +33,7 @@
         <div class="footer__bottom">
           <div class="footer__copyright"><strong>IMBUED WITH MEANING</strong><br>© IWM LLC 2025<br>All Rights
             Reserved<br>TABLE books pro</div>
-          <div class="footer__menu">
+
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="https://tablebooks.pro/privacy/">Privacy Policy</a>
@@ -50,7 +49,7 @@
                   Disclosure</a>
               </li>
             </ul>
-          </div>
+
         </div>
       </div>
     </div>
