--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
   <div class="footer__container container container--size-large">
     <div class="row">
       <div class="footer__grid">
+        <div class="footer__menu"></div>
         <div class="footer__menu">
           <div class="footer__title">Quick Links</div>
           <ul class="footer__menu-list">
