--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="footer__grid">
         <div class="footer__menu"></div>
+        <div class="footer__menu"></div>
         <div class="footer__menu">
           <div class="footer__title">Quick Links</div>
           <ul class="footer__menu-list">
